# greeterbot

./: README.md  haskellbot.cabal  stack.yaml
app/: Main.hs
src/: Db.hs  Lib.hs  Prelude.hs
src/Data/: Event.hs  Message.hs  Transit.hs
test/: Spec.hs
