name:                haskellbot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jamesnvc/haskellbot#readme
license:             OtherLicense
license-file:        LICENSE
author:              James Cash
maintainer:          james@bloomventures.io
copyright:           2017 James Cash
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Data.Transit
                     , Data.Event
                     , Data.Message
                     , Prelude
  build-depends:       base-noprelude >= 4.7 && < 5
                     , text
                     , messagepack
                     , cereal
                     , bytestring
                     , uuid
                     , lens
                     , containers
                     , classy-prelude
                     , yaml
                     , wreq
  default-language:    Haskell2010

executable haskellbot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base-noprelude
                     , haskellbot
                     , text
                     , scotty
                     , bytestring
                     , http-types
                     , yaml
                     , cryptonite
                     , memory
  default-language:    Haskell2010

test-suite haskellbot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base-noprelude
                     , haskellbot
                     , containers
                     , uuid
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskellbot
